--- a/static/style.css
+++ b/static/style.css
@@ -1,3 +1,3 @@
-*{margin:0;padding:0;font-family:Arial;}
+*{margin:0;padding:0;font-family:FiraSans,Arial;}
 .error{color:red;}
 footer {display:block;position:absolute;bottom:0;}
