--- a/static/style.css
+++ b/static/style.css
@@ -1,7 +1,7 @@
 *{margin:0;padding:0;font-family:FiraSans,Arial;color:#333;}
 .error{color:red;}
 body{background-image:linear-gradient(to bottom, #cadeee, #e6e7e7); background-size:auto 1200px}
-footer {display:block;position:absolute;bottom:0;}
+footer {display:none;position:absolute;bottom:0;}
 header {background-color:transparent;position:relative;width:100%;}
 h1 {font-size:86px;color: #484848;text-shadow:0px 1px 0px rgba(255, 255,255,0.75);}
 button {border:0.1rem solid #a6a6a6;font-weight:500;border-radius:0.2rem;background-color:#e7e7e7;}
@@ -22,3 +22,7 @@ button {border:0.1rem solid #a6a6a6;font-weight:500;border-radius:0.2rem;backgro
 .e button{background-color:#f44; color: white;}
 .lastexchange .date{color:#44f;}
 .name {font-size:120%; padding-left: 5px; margin-right:20px;background-color:#C3CFDB}
+
+/*
+.map {border: 1px solid red;position:absolute; bottom:0; right:20px; width: 300px; height:300px;}
+*/
