--- a/static/style.css
+++ b/static/style.css
@@ -14,6 +14,7 @@ button {border:0.1rem solid #a6a6a6;font-weight:500;border-radius:0.2rem;backgro
 .positions {display:none;}
 .commands {padding-left:.5em;}
 .cmd {vertical-align:top;}
+.cmd:nth-child(1) {width:70px;}
 .cmd button {width: 70px;}
 .cmd label {display:inline-block;min-width:10em;text-align:right;}
 .cmd input {position:absolute;left:250px;width:3.5ex;}
