Working map view with positioned headers and footers.

--- a/new_static/app/scripts/templates/location.html
+++ b/new_static/app/scripts/templates/location.html
@@ -1,2 +1,7 @@
-<p>Your content here.</p>
-
+<div id="map"></div>
+<header>
+  <h1>Nick's Phone</h1>
+</header>
+<footer>
+  Play Sound Lock Erase
+</footer>
