Hooked up basic events.

--- a/new_static/app/scripts/templates/location.html
+++ b/new_static/app/scripts/templates/location.html
@@ -3,5 +3,7 @@
   <h1>Nick's Phone</h1>
 </header>
 <footer>
-  Play Sound Lock Erase
+  <span class="play-sound"><a>Play Sound</a></span>
+  <span class="lost-mode"><a>Lost Mode</a></span>
+  <span class="erase"><a>Erase</a></span>
 </footer>
