Toolbar styles with images.

--- a/new_static/app/scripts/templates/location.html
+++ b/new_static/app/scripts/templates/location.html
@@ -3,7 +3,7 @@
   <h1>Nick's Phone</h1>
 </header>
 <footer>
-  <span class="play-sound"><a>Play Sound</a></span>
-  <span class="lost-mode"><a>Lost Mode</a></span>
-  <span class="erase"><a>Erase</a></span>
+  <span class="button play-sound"><a>Play Sound</a></span>
+  <span class="button lost-mode"><a>Lost Mode</a></span>
+  <span class="button erase"><a>Erase</a></span>
 </footer>
