Basic ModalManager implementation.

--- a/new_static/app/styles/main.scss
+++ b/new_static/app/styles/main.scss
@@ -83,7 +83,17 @@ a {
       }
     }
   }
+}
 
+#modal {
+  background: #fff;
+  display: none;
+  height: 100%;
+  left: 0;
+  position: absolute;
+  top: 0;
+  width: 100%;
+  z-index: 1000;
 }
 
 .leaflet-top {
