--- a/new_static/app/scripts/templates/play_sound.html
+++ b/new_static/app/scripts/templates/play_sound.html
@@ -1,1 +1,8 @@
-<h1>Hello world</h1>
+<header>
+  <h2>Play Sound</h2>
+</header>
+<section>
+  <p class="tbd">This will play a sound on your phone even if it's silenced or something.</p>
+
+  <button type="button" class="play-sound tbd">PLAY DAT SOUND</button>
+</section>
