Better TBD style.

--- a/new_static/app/styles/main.scss
+++ b/new_static/app/styles/main.scss
@@ -33,6 +33,7 @@ a {
 
 // "To Be Determined" style for placeholder-ish things
 .tbd {
+  background: yellow;
   color: purple;
   font-style: italic;
 }
