--- a/new_static/app/scripts/templates/erase.html
+++ b/new_static/app/scripts/templates/erase.html
@@ -6,5 +6,7 @@
 
   <p>Once you erase your device you will not be able to restore this device.</p>
 
-  <button type="button" class="erase">Erase Device</button>
+  <div class="buttons">
+    <button type="button" class="erase">Erase Device</button>
+  </div>
 </section>
