--- a/new_static/app/scripts/templates/erase_confirmation.html
+++ b/new_static/app/scripts/templates/erase_confirmation.html
@@ -5,5 +5,8 @@
   <p>Are you sure you want to erase all your data?</p>
 </section>
 <footer>
-  <button type="button" class="cancel">Cancel</button> <button type="button" class="erase">Erase</button>
+  <div class="buttons">
+    <button type="button" class="cancel">Cancel</button>
+    <button type="button" class="erase">Erase</button>
+  </div>
 </footer>
