--- a/new_static/app/scripts/templates/lost_mode.html
+++ b/new_static/app/scripts/templates/lost_mode.html
@@ -1,6 +1,5 @@
 <header>
   <h2>Lost Mode</h2>
-  <a class="next">Next</a>
 </header>
 <section>
   <p>Enter a phone number where you can be reached. It will be shown on your phone.</p>
@@ -10,4 +9,8 @@
   <p>Enter a note that will be shown with your phone number on the phone.</p>
 
   <textarea class="note"></textarea>
+
+  <div class="buttons">
+    <button type="button" class="next">Next</button>
+  </div>
 </section>
