--- a/new_static/app/scripts/templates/lost_mode_passcode.html
+++ b/new_static/app/scripts/templates/lost_mode_passcode.html
@@ -13,5 +13,7 @@
 
   <p>Once your phone is locked, you will not be able to change this code again.</p>
 
-  <button type="button" class="activate">Activate Lost Mode</button>
+  <div class="buttons">
+    <button type="button" class="activate">Activate Lost Mode</button>
+  </div>
 </section>
