--- a/new_static/app/scripts/templates/play_sound.html
+++ b/new_static/app/scripts/templates/play_sound.html
@@ -4,5 +4,7 @@
 <section>
   <p class="tbd">This will play a sound on your phone even if it's silenced or something.</p>
 
-  <button type="button" class="play-sound tbd">PLAY DAT SOUND</button>
+  <div class="buttons">
+    <button type="button" class="play-sound tbd">PLAY DAT SOUND</button>
+  </div>
 </section>
