Changed phone number to tel input type.

--- a/new_static/app/scripts/templates/lost_mode.html
+++ b/new_static/app/scripts/templates/lost_mode.html
@@ -4,7 +4,7 @@
 <section>
   <p>Enter a phone number where you can be reached. It will be shown on your phone.</p>
 
-  <input type="text" class="phone-number">
+  <input type="tel" class="phone-number">
 
   <p>Enter a note that will be shown with your phone number on the phone.</p>
 
