--- a/static/app/styles/main.scss
+++ b/static/app/styles/main.scss
@@ -33,9 +33,9 @@ a {
 
 // "To Be Determined" style for placeholder-ish things
 .tbd {
-  background: yellow;
-  color: purple;
-  font-style: italic;
+  background: yellow !important;
+  color: purple !important;
+  font-style: italic !important;
 }
 
 #stage {
@@ -112,19 +112,14 @@ a {
   border-radius: 6px;
   box-shadow: 0 2px 2px rgba(0,0,0,0.2);
   display: none;
-  height: 400px;
-  left: 50%;
-  margin-left: -150px;
-  margin-top: -200px;
   overflow: hidden;
   position: absolute;
-  top: 50%;
   width: 300px;
   z-index: 1000;
 
   header {
     background: $header-background-color;
-    padding: 5px;
+    padding: 5px 20px;
 
     h2 {
       color: $heading-text-color;
@@ -135,10 +130,26 @@ a {
   }
 
   section {
-    padding: 10px;
+    padding: 20px;
+
+    p:first-child {
+      margin-top: 0;
+    }
+
+    button, input, textarea {
+      width: 100%;
+    }
 
     .buttons {
-      margin-top: 10px;
+      margin-top: 20px;
+
+      button {
+        border: none;
+        background: #5493da;
+        border-radius: 5px;
+        color: #fff;
+        padding: 10px;
+      }
     }
   }
 }
