Added device model and location tracking.

--- a/new_static/app/scripts/templates/location.html
+++ b/new_static/app/scripts/templates/location.html
@@ -1,6 +1,6 @@
 <div id="map"></div>
 <header>
-  <h1>Nick's Phone</h1>
+  <h1>{{name}}</h1>
 </header>
 <footer>
   <span class="button play-sound"><a>Play Sound</a></span>
