Usability and visual clean up.

--- a/static/app/scripts/templates/erase.html
+++ b/static/app/scripts/templates/erase.html
@@ -7,6 +7,6 @@
   <p>Once you erase your device you will not be able to restore this device.</p>
 
   <div class="buttons">
-    <button type="button" class="erase">Erase Device</button>
+    <button type="button" class="erase primary">Erase Device</button>
   </div>
 </section>
