--- a/static/app/scripts/templates/erase_confirmation.html
+++ b/static/app/scripts/templates/erase_confirmation.html
@@ -7,6 +7,6 @@
 <footer>
   <div class="buttons">
     <button type="button" class="cancel">Cancel</button>
-    <button type="button" class="erase">Erase</button>
+    <button type="button" class="erase danger">Erase</button>
   </div>
 </footer>
