--- a/static/app/styles/_variables.scss
+++ b/static/app/styles/_variables.scss
@@ -12,3 +12,6 @@ $footer-text-color: #f2f1ec;
 $header-background-color: #f4f4f4;
 $heading-text-color: #8a8b97;
 $modal-background-color: #fff;
+$modal-button-background-color: #bbb;
+$modal-button-danger-background-color: red;
+$modal-button-primary-background-color: #5493da;
