--- a/static/app/scripts/templates/location.html
+++ b/static/app/scripts/templates/location.html
@@ -1,6 +1,6 @@
 <div id="map"></div>
 <header>
-  <h1>{{name}}</h1>
+  <h1 title="{{name}}">Erin's Phone</h1>
 </header>
 <footer>
   <span class="button play-sound"><a>Play Sound</a></span>
