--- a/static/app/scripts/templates/play_sound.html
+++ b/static/app/scripts/templates/play_sound.html
@@ -2,9 +2,9 @@
   <h2>Play Sound</h2>
 </header>
 <section>
-  <p class="tbd">This will play a sound on your phone even if it's silenced or something.</p>
+  <p class="tbd">This will play a sound on your device to help you find it.</p>
 
   <div class="buttons">
-    <button type="button" class="play-sound tbd">PLAY DAT SOUND</button>
+    <button type="button" class="play-sound primary tbd">Play Sound</button>
   </div>
 </section>
