--- a/static/app/styles/main.css
+++ b/static/app/styles/main.css
@@ -15,11 +15,6 @@ html, body, #stage, #stage > div, #map {
 a {
   cursor: pointer; }
 
-.tbd {
-  background: yellow !important;
-  color: purple !important;
-  font-style: italic !important; }
-
 #stage {
   position: relative; }
   #stage header {
@@ -34,6 +29,7 @@ a {
     #stage header h1 {
       color: #8a8b97;
       font-size: 27px;
+      font-style: italic;
       font-weight: normal;
       height: 32px;
       margin-top: -16px;
@@ -85,22 +81,54 @@ a {
     #modal header h2 {
       color: #8a8b97;
       font-size: 27px;
+      font-style: italic;
       font-weight: normal;
       margin: 0; }
+      #modal header h2 small {
+        font-size: 18px; }
   #modal section {
     padding: 20px; }
     #modal section p:first-child {
       margin-top: 0; }
     #modal section button, #modal section input, #modal section textarea {
       width: 100%; }
-    #modal section .buttons {
-      margin-top: 20px; }
-      #modal section .buttons button {
-        border: none;
-        background: #5493da;
-        border-radius: 5px;
-        color: #fff;
-        padding: 10px; }
+    #modal section input, #modal section textarea {
+      border: 1px solid #ccc;
+      padding: 8px; }
+    #modal section textarea {
+      height: 75px;
+      resize: none; }
+  #modal footer {
+    padding: 0 20px 20px 20px; }
+    #modal footer .buttons {
+      margin-top: 0;
+      text-align: center; }
+      #modal footer .buttons button {
+        width: 48%; }
+  #modal .buttons {
+    margin-top: 20px; }
+    #modal .buttons button {
+      background: #bbb;
+      border: none;
+      border-radius: 5px;
+      color: #fff;
+      padding: 10px; }
+      #modal .buttons button:hover {
+        background: #c3c3c3; }
+      #modal .buttons button:active {
+        background: #aeaeae; }
+      #modal .buttons button.danger {
+        background: red; }
+        #modal .buttons button.danger:hover {
+          background: #ff1a1a; }
+        #modal .buttons button.danger:active {
+          background: #e60000; }
+      #modal .buttons button.primary {
+        background: #5493da; }
+        #modal .buttons button.primary:hover {
+          background: #69a2df; }
+        #modal .buttons button.primary:active {
+          background: #3f88d5; }
 
 .leaflet-top {
   top: 45px; }
