--- a/static/app/styles/main.scss
+++ b/static/app/styles/main.scss
@@ -38,6 +38,28 @@ a {
 //   font-style: italic !important;
 // }
 
+.hero {
+  color: #333;
+  padding: 60px 20px 20px 20px;
+  text-align: center;
+
+  h1 {
+    margin-bottom: 0;
+  }
+
+  h2 {
+    color: #aaa;
+    font-size: 20px;
+    font-style: italic;
+    font-weight: normal;
+    margin-top: 10px;
+  }
+
+  .signout {
+    font-weight: bold;
+  }
+}
+
 #stage {
   position: relative;
 
@@ -59,6 +81,15 @@ a {
       height: 32px;
       margin-top: -16px;
       position: absolute;
+      top: 50%;
+    }
+
+    .signout {
+      color: $heading-text-color;
+      font-style: italic;
+      margin-top: -9px;
+      position: absolute;
+      right: 20px;
       top: 50%;
     }
   }
