--- a/static/app/scripts/templates/location.html
+++ b/static/app/scripts/templates/location.html
@@ -1,6 +1,7 @@
 <div id="map"></div>
 <header>
   <h1 title="{{name}}">Erin's Phone</h1>
+  <a class="signout">Sign out</a>
 </header>
 <footer>
   <span class="button play-sound"><a>Play Sound</a></span>
