--- a/static/app/styles/main.scss
+++ b/static/app/styles/main.scss
@@ -1,4 +1,4 @@
-/* This Source Code Form is subject to the terms of the Mozilla Public
+/*! This Source Code Form is subject to the terms of the Mozilla Public
  * License, v. 2.0. If a copy of the MPL was not distributed with this
  * file, You can obtain one at http://mozilla.org/MPL/2.0/. */
 
@@ -142,7 +142,7 @@ a {
 #modal {
   background: $modal-background-color;
   border-radius: 6px;
-  box-shadow: 0 2px 2px rgba(0,0,0,0.2);
+  box-shadow: 0 2px 2px rgba(0, 0, 0, 0.2);
   display: none;
   overflow: hidden;
   position: absolute;
