Integrated new FxA login and new devices endpoint.

--- a/static/app/scripts/templates/location.html
+++ b/static/app/scripts/templates/location.html
@@ -1,6 +1,6 @@
 <div id="map"></div>
 <header>
-  <h1 title="{{name}}">Erin's Phone</h1>
+  <h1 title="{{id}}">{{name}}</h1>
   <a class="signout">Sign out</a>
 </header>
 <footer>
