--- a/static/app/styles/main.css
+++ b/static/app/styles/main.css
@@ -3,6 +3,8 @@
  * file, You can obtain one at http://mozilla.org/MPL/2.0/. */
 /* Border box all the things */
 *, *:before, *:after {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
   box-sizing: border-box; }
 
 html, body, input, select {
@@ -91,6 +93,7 @@ a {
 #modal {
   background: #fff;
   border-radius: 6px;
+  -webkit-box-shadow: 0 2px 2px rgba(0, 0, 0, 0.2);
   box-shadow: 0 2px 2px rgba(0, 0, 0, 0.2);
   display: none;
   overflow: hidden;
