--- a/static/app/scripts/templates/lost_mode_passcode.html
+++ b/static/app/scripts/templates/lost_mode_passcode.html
@@ -5,11 +5,11 @@
   <section>
     <p>Lock your phone by entering a passcode:</p>
 
-    <input type="text" class="passcode" required pattern="\d{4}" maxlength="4">
+    <input type="text" name="passcode-1" class="passcode" required pattern="\d{4}" maxlength="4">
 
     <p>Enter passcode again:</p>
 
-    <input type="text" class="passcode" required pattern="\d{4}" maxlength="4">
+    <input type="text" name="passcode-2" class="passcode" required pattern="\d{4}" maxlength="4">
 
     <p>Once your phone is locked, you will not be able to change this code again.</p>
 
