Fixed note description.

--- a/static/app/scripts/templates/lost_mode.html
+++ b/static/app/scripts/templates/lost_mode.html
@@ -3,7 +3,7 @@
     <h2>Lost Mode</h2>
   </header>
   <section>
-    <p>Enter a note that will be shown with your phone number on the phone.</p>
+    <p>Enter a note that will be shown on the phone.</p>
 
     <textarea class="note" maxlength="100" placeholder="Note (optional)"></textarea>
 
