--- a/static/app/styles/_variables.scss
+++ b/static/app/styles/_variables.scss
@@ -4,12 +4,15 @@ $default-font-family: 'TypoPRO Fira Sans', sans-serif;
 // COLORS
 $footer-background-color--desktop: #e7e7e7;
 $footer-background-color: #242426;
+$footer-height: 39px;
+$footer-height--desktop: 47px;
 $footer-link-active-background-color: #6f7181;
 $footer-link-background-color: #6f7181;
 $footer-link-hover-background-color--desktop: #d9d9d9;
 $footer-text-color--desktop: #333;
 $footer-text-color: #f2f1ec;
 $header-background-color: #f4f4f4;
+$header-height: 47px;
 $heading-text-color: #8a8b97;
 $modal-background-color: #fff;
 $modal-button-background-color: #bbb;
