--- a/static/app/styles/main.scss
+++ b/static/app/styles/main.scss
@@ -61,13 +61,13 @@ a {
 }
 
 #stage {
-  padding-bottom: 39px; // starts content above footer
-  padding-top: 47px; // starts content below header
+  padding-bottom: $footer-height; // starts content above footer
+  padding-top: $header-height; // starts content below header
   position: relative;
 
   header {
     background: $header-background-color;
-    height: 47px;
+    height: $header-height;
     left: 0;
     padding: 0 34px;
     position: absolute;
@@ -100,7 +100,7 @@ a {
     background: $footer-background-color;
     bottom: 0;
     color: $footer-text-color;
-    height: 39px;
+    height: $footer-height;
     left: 0;
     position: absolute;
     width: 100%;
