--- a/static/app/styles/_media_queries.scss
+++ b/static/app/styles/_media_queries.scss
@@ -5,6 +5,12 @@
     padding-bottom: 0; // remove padding on the bottom for footer
     padding-top: $header-height + $footer-height--desktop;
 
+    header {
+      h1 {
+        cursor: pointer;
+      }
+    }
+
     footer {
       background: $footer-background-color--desktop;
       bottom: auto;
