--- a/static/app/styles/main.css
+++ b/static/app/styles/main.css
@@ -162,6 +162,8 @@ a {
   #stage {
     padding-bottom: 0;
     padding-top: 94px; }
+    #stage header h1 {
+      cursor: pointer; }
     #stage footer {
       background: #e7e7e7;
       bottom: auto;
