Fixed sign in/out
* Issue #83 -- added signout href
* Issue #84 -- added signin href
* Issue #63 -- added hard panic on db open failure.

--- a/static/app/scripts/templates/device.html
+++ b/static/app/scripts/templates/device.html
@@ -1,7 +1,7 @@
 <div id="map"></div>
 <header>
   <h1 title="{{id}}">{{name}}</h1>
-  <a class="signout">Sign out</a>
+  <a class="signout" href="/signout/">Sign out</a>
 </header>
 <footer>
   <span class="button play-sound"><a>Play Sound</a></span>
