--- a/static/app/styles/main.scss
+++ b/static/app/styles/main.scss
@@ -4,6 +4,7 @@
 
 @import "variables";
 @import "fonts";
+@import "keyframes";
 
 /* Border box all the things */
 *,
@@ -29,7 +30,9 @@ body,
 }
 
 a {
+  color: #79c8ee;
   cursor: pointer;
+  text-decoration: none;
 }
 
 // "To Be Determined" style for placeholder-ish things
@@ -70,7 +73,6 @@ a {
     background: $header-background-color;
     height: $header-height;
     left: 0;
-    padding: 0 34px;
     position: absolute;
     top: 0;
     width: 100%;
@@ -84,16 +86,66 @@ a {
       height: 32px;
       margin-top: -16px;
       position: absolute;
+      text-align: center;
       top: 50%;
+      width: 100%;
     }
 
     .signout {
-      color: $heading-text-color;
-      font-style: italic;
       margin-top: -9px;
       position: absolute;
       right: 20px;
       top: 50%;
+    }
+  }
+
+  #map {
+    background: image-url('bg.png') no-repeat 50% 50%, linear-gradient(180deg, $header-background-color, #fff);
+    position: relative;
+
+    .locating {
+      height: 200px;
+      left: 50%;
+      margin-left: -100px;
+      margin-top: -100px;
+      position: absolute;
+      text-align: center;
+      top: 50%;
+      width: 200px;
+
+      h2 {
+        font-size: 14px;
+        font-weight: normal;
+
+        &::before {
+          animation-name: spin;
+          animation-duration: 1500ms;
+          animation-iteration-count: infinite;
+          animation-timing-function: linear;
+          background: image-url('radar-spinner.png') no-repeat;
+          content: '';
+          display: block;
+          height: 139px;
+          margin: 0 auto 25px auto;
+          width: 140px;
+        }
+      }
+    }
+
+    .brand {
+      background: image-url('firefoxos.png') no-repeat;
+      bottom: 38px;
+      height: 28px;
+      left: 38px;
+      position: absolute;
+      text-indent: -1000em;
+      width: 137px;
+      z-index: 1000;
+    }
+
+    // Hide when the map is loaded
+    &.leaflet-container .locating {
+      display: none;
     }
   }
 
@@ -114,7 +166,8 @@ a {
       width: 33%;
 
       a {
-        background: image-url('icon-sound-white.png') no-repeat 50% 50%;
+        background: image-url('icon-sound.png') no-repeat 50% 50%;
+        color: $footer-text-color;
         display: block;
         font-size: 13px;
         height: 39px;
@@ -128,15 +181,15 @@ a {
       }
 
       &.play-sound a {
-        background-image: image-url('icon-sound-white.png');
+        background-image: image-url('icon-sound.png');
       }
 
       &.lost-mode a {
-        background-image: image-url('icon-lock-white.png');
+        background-image: image-url('icon-lock.png');
       }
 
       &.erase a {
-        background-image: image-url('icon-erase-white.png');
+        background-image: image-url('icon-erase.png');
       }
     }
   }
