Much improved modals. More pin awesomeness.

--- a/static/app/scripts/templates/device.html
+++ b/static/app/scripts/templates/device.html
@@ -1,4 +1,5 @@
 <header>
+  <a class="menu">Menu</a>
   <h1 title="{{id}}">{{name}}</h1>
   <a class="signout" href="/signout/">Sign out</a>
 </header>
