--- a/static/app/scripts/templates/lost_mode_passcode.html
+++ b/static/app/scripts/templates/lost_mode_passcode.html
@@ -1,7 +1,12 @@
 <form>
   <header>
-    <h2>Lost Mode <small>(continued)</small></h2>
+    <a class="back">Back</a>
+    <h2>Lost Mode</h2>
   </header>
+  <ul class="stepper">
+    <li class="complete">Step 1</li>
+    <li class="active">Step 2</li>
+  </ul>
   <section>
     <p>Lock your phone by entering a passcode:</p>
 
