--- a/static/app/styles/_variables.scss
+++ b/static/app/styles/_variables.scss
@@ -13,8 +13,9 @@ $footer-text-color--desktop: #56565a;
 $footer-text-color: #56565a;
 $header-background-color: #f4f4f4;
 $header-height: 47px;
-$heading-text-color: #8a8b97;
-$modal-background-color: #fff;
+$heading-text-color: #999;
+$modal-background-color: #f4f4f4;
+$modal-text-color: #686868;
 $modal-button-background-color: #bbb;
 $modal-button-danger-background-color: red;
-$modal-button-primary-background-color: #5493da;
+$modal-button-primary-background-color: #79c8ee;
