--- a/static/app/scripts/templates/lost_mode.html
+++ b/static/app/scripts/templates/lost_mode.html
@@ -1,11 +1,16 @@
 <form>
   <header>
+    <a class="close">Close</a>
     <h2>Lost Mode</h2>
   </header>
+  <ul class="stepper">
+    <li class="active">Step 1</li>
+    <li>Step 2</li>
+  </ul>
   <section>
     <p>Enter a note that will be shown on the phone.</p>
 
-    <textarea class="note" maxlength="100" placeholder="Note (optional)"></textarea>
+    <textarea class="note" maxlength="100" placeholder="Note (optional)">{{ note }}</textarea>
 
     <div class="buttons">
       {{#hasPasscode}}
