--- a/static/app/styles/_desktop.scss
+++ b/static/app/styles/_desktop.scss
@@ -1,4 +1,3 @@
-/* Desktop */
 
 @media only screen and (min-width: 768px) {
   #stage {
@@ -53,15 +52,37 @@
       }
     }
   }
-}
 
-// Styles are "mobile first" and don't usually belong in this media block. Only rules that are
-// important overrides from desktop belong here.
-@media only screen and (max-width: 768px) {
   #modal {
-    height: 100%;
-    left: 0 !important;
-    top: 0 !important;
-    width: 100%;
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    border-radius: 6px;
+    box-shadow: 0 5px 8px rgba(0, 0, 0, 0.2);
+    background-clip: padding-box;
+
+    &::before {
+      border-style: solid;
+      border-width: 0 10px 10px 10px;
+      border-color: transparent transparent $modal-background-color transparent;
+      content: '';
+      height: 0;
+      left: 48px;
+      position: absolute;
+      top: -10px;
+      width: 0;
+      z-index: 1001;
+    }
+
+    &::after {
+      border-style: solid;
+      border-width: 0 11px 11px 11px;
+      border-color: transparent transparent rgba(0, 0, 0, 0.2) transparent;
+      content: '';
+      height: 0;
+      left: 47px;
+      position: absolute;
+      top: -11px;
+      width: 0;
+      z-index: 1000;
+    }
   }
 }
